deleted the old webconfing.java files